tests/rosetta/out/Rust/bitwise-operations.error
rustc: exit status 1
error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:21:49
   |
21 |             mask = ((mask as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                 ^^^^^ method not found in `f64`

error[E0308]: mismatched types
  --> /tmp/bitwise-operations.rs:23:16
   |
10 |     fn bin16(n: i32) -> &'static str {
   |                         ------------ expected `&'static str` because of return type
...
23 |         return bits;
   |                ^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
23 |         return &bits;
   |                +

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:34:45
   |
34 |             ua = ((ua as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:35:45
   |
35 |             ub = ((ub as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:49:45
   |
49 |             ua = ((ua as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:50:45
   |
50 |             ub = ((ub as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:66:45
   |
66 |             ua = ((ua as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:67:45
   |
67 |             ub = ((ub as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/bitwise-operations.rs:89:45
   |
89 |             ua = ((ua as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
   --> /tmp/bitwise-operations.rs:102:51
    |
102 |                 val = ((val as f64) / (2 as f64)).parse::<i32>().unwrap();
    |                                                   ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
   --> /tmp/bitwise-operations.rs:104:57
    |
104 |                 val = (((val - 1) as f64) / (2 as f64)).parse::<i32>().unwrap();
    |                                                         ^^^^^ method not found in `f64`

warning: variable does not need to be mutable
  --> /tmp/bitwise-operations.rs:73:13
   |
73 |         let mut ua = toUnsigned16(a);
   |             ----^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> /tmp/bitwise-operations.rs:111:13
    |
111 |         let mut ua = toUnsigned16(a);
    |             ----^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> /tmp/bitwise-operations.rs:117:13
    |
117 |         let mut ua = toUnsigned16(a);
    |             ----^^
    |             |
    |             help: remove this `mut`

error: aborting due to 11 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
